# agentforge

./: .gitignore  pyproject.toml  tree.py
docs/ADR/: ADR-001  ADR-002  ADR-003  ADR-004
docs/architecture/: 01_System_Architecture.md  02_Runtime_Architecture.md  03_Security_Architecture.md  04_Data_Model.md  05_API_Architecture.md  06_Repository_Architecture.md  07_Deployment_Architecture.md  08_Observability_Architecture.md  09_AgentOps_Architecture.md
docs/charter/: 01_Project_Charter.md  02_Product_Vision.md  03_Roadmap.md  04_Glossary.md
docs/design/: 01_Runtime_Sequence_Diagrams.md  02_Provider_Design.md  03_Tool_Framework_Design.md  04_Memory_Design_V2.md  05_Context_Builder_Design.md  06_Approval_Manager_Design.md  07_Conversation_Manager_Design.md
docs/implementation/: 01_Repository_Setup.md  02_RuntimeState.md  03_Task.md  04_ExecutionContext.md  05_TaskStateMachine.md  06_Provider_Models.md  07_BaseProvider.md  08_MockProvider.md  09_CompletionManager.md  10_AgentRuntime.md  11_EventBus.md  12_Testing_Strategy.md
docs/reviews/: Post_Sprint01_Review_And_Implementation_Decision.md  Sprint-01-Architecture-Review.md  Sprint-01-Closure-Review.md
docs/sprints/: Sprint-01-Implementation-Plan.md  Sprint-01-Runtime.md
src/core/completion/: completion_manager.py
src/core/runtime/: execution_context.py
tests/unit/: test_agent_runtime.py  test_base_provider.py  test_completion_manager.py  test_event_bus.py  test_execution_context.py  test_mock_provider.py  test_provider_models.py  test_runtime_state.py  test_state_machine.py  test_task.py
(+31 files in other folders)
