[project]
name = "agentforge"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=9.0.3,<10.0.0)",
    "ruff (>=0.15.15,<0.16.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "pydantic (>=2.13.4,<3.0.0)"
]

[tool.poetry]
packages = [{include = "agentforge", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[dependency-groups]
dev = [
    "pytest-asyncio (>=1.4.0,<2.0.0)"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"